Fix: Termina Edit deusuário e adiciona dark Mode

--- a/apps/comunidadeWeb/src/index.css
+++ b/apps/comunidadeWeb/src/index.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body, #root {
+  height: 100%;
+}
 
 body {
   @apply font-poppins;
+  @apply bg-branco dark:bg-preto-dark transition-colors duration-300;
 }
 
 @keyframes slideDown {
